monkeypatch and setup for nested response object refs
